feat: add first question block and styles

--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -7,6 +7,7 @@ body {
   font-family: $font-family;
   box-sizing: border-box;
   color: $main-color;
+  background-color: $gray-color;
   margin: 0;
   padding: 0;
 }
