--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* open-sans-regular - latin_cyrillic */
 @font-face {
   font-family: 'Open Sans';
@@ -40,8 +41,167 @@ body {
   font-family: "Open Sans", sans-serif;
   box-sizing: border-box;
   color: #000000;
+  background-color: #E5E5E5;
   margin: 0;
   padding: 0;
+}
+
+.questions-block {
+  width: 66.25%;
+  max-width: 944px;
+  border: 1px solid #fff;
+  box-shadow: 4px 4px 7px #E5E5E5;
+  border-radius: 8px;
+  margin: 0 auto;
+  background-color: #fff;
+}
+
+.questions-wrapper {
+  padding: 20px 113px 42px 59px;
+}
+
+.question-wrapper {
+  width: 88.235294118%;
+  margin: 0 auto;
+}
+
+.question-buttons__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+}
+
+.question-buttons__wrapper--two-lines {
+  height: 100px;
+}
+
+/* удаление иконки очистки поля в IE */
+input[type="text"]::-ms-clear {
+  display: none;
+}
+
+/* удаление иконки отображения пароля в IE */
+input[type="password"]::-ms-reveal {
+  display: none;
+}
+
+.question-block {
+  margin-bottom: 40px;
+}
+
+.question-block__city {
+  border: none;
+  background-image: none;
+  background-color: transparent;
+  box-shadow: none;
+  box-sizing: border-box;
+  width: 220px;
+  height: 40px;
+  padding: 0;
+  border: 1px solid #6F7F8F;
+  border-radius: 6px;
+  caret-color: #6F7F8F;
+  background-color: #fff;
+  padding-left: 21px;
+  color: #6F7F8F;
+  transition: border-color .2s ease-out;
+}
+
+.question-block__city:focus {
+  outline: none;
+  border-color: #FFB300;
+  transition: border-color .2s ease-in;
+}
+
+.question-block__city::placeholder {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 16px;
+  color: rgba(111, 127, 143, 0.7);
+}
+
+.question {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 19px;
+  color: #000;
+  font-weight: 600;
+  margin-top: 0px;
+}
+
+.question-button {
+  display: flex;
+  justify-content: center;
+  min-width: 100px;
+  box-sizing: border-box;
+  height: 40px;
+  border-radius: 6px;
+  background-color: #fff;
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 16px;
+  color: #000;
+  border: 1px solid #FFB300;
+  padding: 0 20px 0 20px;
+  white-space: nowrap;
+  margin-right: 17px;
+  transition: all .3 ease-in-out;
+  cursor: pointer;
+}
+
+.question-button__active {
+  background-color: #FFB300;
+}
+
+.question-button:hover {
+  background-color: #FFB300;
+  transition: all .3 ease-in-out;
+}
+
+.question-button:last-child {
+  margin-right: 0px;
+}
+
+.question--margin {
+  margin: 0 0 20px 0;
+}
+
+.introduction {
+  position: relative;
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 19px;
+  color: #000;
+}
+
+.introduction p {
+  margin: 0;
+  padding: 0;
+}
+
+.introduction p:first-child {
+  margin-bottom: 6px;
+}
+
+.introduction p:last-child {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 16px;
+  color: #6F7F8F;
+}
+
+.introduction--margin {
+  margin-bottom: 55px;
 }
 
 .nav-wrapper {
@@ -50,8 +210,10 @@ body {
   max-width: 100vw;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 41px;
   padding: 0px 24px 0px 40px;
   box-shadow: 0px 2px 16px rgba(55, 63, 71, 0.15);
+  background-color: #fff;
 }
 
 .nav-wrapper--fixed {
@@ -78,6 +240,12 @@ body {
 
 .logo--margin {
   margin: 0 45px 0 8px;
+}
+
+.logo > a {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .menu {
@@ -178,4 +346,79 @@ body {
   border: 1px solid #6F7F8F;
   border-radius: 6px;
   background-color: #fff;
+  cursor: pointer;
+}
+
+.progress {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.progress--margin {
+  margin-bottom: 55px;
+}
+
+.progress-line {
+  width: 31.4578%;
+}
+
+.progress-line__num {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 11px;
+  line-height: 15px;
+  color: #E5E5E5;
+}
+
+.progress-line__line {
+  border: 1px solid #E5E5E5;
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 11px;
+  line-height: 15px;
+  color: #E5E5E5;
+}
+
+.progress-line--active {
+  color: #26A65B;
+  border-color: #26A65B;
+}
+
+.next {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.next-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  width: 466px;
+  height: 48px;
+  border-radius: 6px;
+  background: #26A65B;
+  color: #000;
+  border: none;
+  cursor: pointer;
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 19px;
+  color: #fff;
+  font-weight: 600;
+}
+
+.next-btn:focus {
+  outline: none;
+}
+
+.next-btn:hover {
+  background-color: #FFB300;
 }
