--- a/scss/nav-bar/_nav-bar.scss
+++ b/scss/nav-bar/_nav-bar.scss
@@ -4,8 +4,10 @@
   max-width: 100vw;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 41px;
   padding: 0px 24px 0px 40px;
   box-shadow: 0px 2px 16px rgba(55, 63, 71, 0.15);
+  background-color: #fff;
   &--fixed {
     position: fixed;
   }
@@ -30,6 +32,12 @@
 
   &--margin {
     margin: 0 45px 0 8px;
+  }
+
+  & > a {
+    display: block;
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -111,4 +119,5 @@
   border: 1px solid #6F7F8F;
   border-radius: 6px;
   background-color: #fff;
+  cursor: pointer;
 }
