--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,3 +7,4 @@
 @import './nav-bar/_nav-bar';
 @import './questions/progress/_progress';
 @import './questions/button/_button';
+@import './checkout/_checkout'
