--- a/scss/questions/_questions.scss
+++ b/scss/questions/_questions.scss
@@ -112,4 +112,12 @@ input[type="password"]::-ms-reveal {
     margin: 0 0 20px 0;
   }
 
+  &--no-margin {
+    margin-bottom: 0;
+  }
+
+  &__confidential {
+    margin-top: 0;
+    @include setFont(12px, 16px, #6F7F8F);
+  }
 }
