--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
 @import './questions/_questions';
 @import './questions/introduction/_introduction';
 @import './nav-bar/_nav-bar';
+@import './questions/nav-arrows/_nav-arrows';
 @import './questions/progress/_progress';
 @import './questions/button/_button';
 @import './checkout/_checkout'
