--- a/scss/_bindings.scss
+++ b/scss/_bindings.scss
@@ -9,3 +9,4 @@ $gray-disclaimer-color: #6F7F8F;
 $green-color: #26A65B;
 $yellow-color: #FFB300;
 $gray-text-color: rgba(111, 127, 143, 0.7);
+$button-hover-color: #0FCB5D;
