--- a/scss/checkout/_checkout.scss
+++ b/scss/checkout/_checkout.scss
@@ -1,6 +1,7 @@
 .checkout-block {
   width: 66.25%;
   max-width: 944px;
+  min-width: 944px;
   border: 1px solid #fff;
   box-shadow: 4px 4px 7px #E5E5E5;
   border-radius: 8px;
@@ -9,7 +10,7 @@
 }
 
 .checkout__wrapper {
-  padding: 20px 113px 42px 59px;
+  padding: 53px 113px 64px 59px;
 }
 
 .heart {
@@ -17,6 +18,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-bottom: 40px;
 
   &__img {
     width: 44px;
@@ -38,9 +40,44 @@
   margin: auto;
   max-width: 567px;
   @include setFont(14px, 19px, #000);
-  margin-bottom: 62px;
+  margin-bottom: 100px;
   
   p {
     margin: 0 0 15px 0;
   }
+
+  p:last-child {
+    margin: 0 0 0 0;
+  }
 }
+
+/* Desktop and iPad under 1089px ----------- */
+@media only screen
+and (min-width: 320px)
+and (max-width: 1089px) {
+  .checkout-block {
+    width: 100%;
+    min-width: initial;
+    max-width: initial;
+  }
+}
+
+
+
+/* iPads (landscape) ----------- */
+@media only screen
+and (min-device-width: 768px)
+and (max-device-width: 1024px)
+and (orientation: landscape) {
+  
+
+
+}
+
+/* Mobile ----------- */
+@media only screen
+and (min-width: 320px)
+and (max-width: 480px) {
+
+}
+
