--- a/scss/nav-bar/_nav-bar.scss
+++ b/scss/nav-bar/_nav-bar.scss
@@ -8,9 +8,14 @@
   padding: 0px 24px 0px 40px;
   box-shadow: 0px 2px 16px rgba(55, 63, 71, 0.15);
   background-color: #fff;
-  &--fixed {
-    position: fixed;
-  }
+}
+
+.burger {
+  display: none;
+  width: 28px;
+  height: 19px;
+  background-image: url('../../images/burger.png');
+  background-size: cover;
 }
 
 .navbar {
@@ -24,6 +29,7 @@
   
 .logo {
   width: 120px;
+  min-width: 120px;
   height: 46px;
   background-image: url('../../images/kiwitaxi-logo.svg');
   background-repeat: no-repeat;
@@ -121,3 +127,94 @@
   background-color: #fff;
   cursor: pointer;
 }
+
+/* Desktop and iPad above 1089px ----------- */
+@media only screen
+and (min-width: 1089px)
+and (max-width: 1200px) {
+  .nav-wrapper {
+    padding: 0px 12px 0px 20px;
+  }
+
+  .dropdown {
+    min-width: 270px;
+  }
+
+  .menu--margin {
+    margin-right: 2%;
+  }
+
+  .menu {
+    min-width: 540px;
+  }
+}
+
+/* Desktop and iPad under 1089px ----------- */
+@media only screen
+and (min-width: 320px)
+and (max-width: 1089px) {
+  .menu {
+    display: none;
+  }
+
+  .dropdown {
+    display: none;
+  }
+
+  .burger {
+    display: flex;
+  }
+
+  .navbar {
+    width: 28px;
+  }
+
+  .nav-wrapper {
+    position: relative;
+    z-index: 10;
+    justify-content: space-between;
+    padding: 0px 16px 0px 17px;
+    margin-bottom: 0px;
+  }
+
+  .logo--margin {
+    margin: 0;
+  }
+
+  .questions-block {
+    width: 100%;
+    min-width: initial;
+    max-width: initial;
+  }
+}
+
+/* Desktop and iPad under 950px ----------- */
+@media only screen
+and (min-width: 320px)
+and (max-width: 950px) {
+  .nav-wrapper {
+    height: 52.08px;
+  }
+}
+
+
+
+/* iPads (landscape) ----------- */
+@media only screen
+and (min-device-width: 768px)
+and (max-device-width: 1024px)
+and (orientation: landscape) {
+  
+
+
+}
+
+/* Mobile ----------- */
+@media only screen
+and (min-width: 320px)
+and (max-width: 480px) {
+.nav-wrapper {
+  height: 52px;
+}
+}
+
