--- a/scss/questions/progress/_progress.scss
+++ b/scss/questions/progress/_progress.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 22px;
 
   &--margin {
     margin-bottom: 55px;
@@ -13,10 +14,11 @@
 
     &__num {
       @include setFont(11px, 15px, #E5E5E5);
+      padding-bottom: 3px;
     }
 
     &__line {
-      border: 1px solid #E5E5E5;
+      border: 3px solid #E5E5E5;
       @include setFont(11px, 15px, #E5E5E5);
     }
 
@@ -25,4 +27,13 @@
       border-color: $green-color;
     }
   }
+}
+
+
+@media only screen
+and (min-width: 320px)
+and (max-width: 480px) {
+ .progress--margin {
+   margin-bottom: 35px;
+ }
 }
