--- a/scss/checkout/_checkout.scss
+++ b/scss/checkout/_checkout.scss
@@ -60,6 +60,18 @@ and (max-width: 1089px) {
     min-width: initial;
     max-width: initial;
   }
+
+  .checkout__wrapper {
+    padding: 104.92px 73px 524px 128px
+  }
+
+  .heart {
+    padding-bottom: 40px;
+  }
+
+  .bye {
+    margin-bottom: 100px;
+  }
 }
 
 
@@ -78,6 +90,16 @@ and (orientation: landscape) {
 @media only screen
 and (min-width: 320px)
 and (max-width: 480px) {
+  .checkout__wrapper {
+    padding: 59px 16px 64px 15px;
+  }
 
+  .heart {
+    padding-bottom: 43px;
+  }
+
+  .bye {
+    margin-bottom: 200px;
+  }
 }
 
