--- a/scss/questions/_questions.scss
+++ b/scss/questions/_questions.scss
@@ -91,13 +91,13 @@ input[type="password"]::-ms-reveal {
     justify-content: center;
     min-width: 100px;
     box-sizing: border-box;
-    height: 40px;
+    // height: 40px;
     border-radius: 6px;
     background-color: #fff;
     @include setFont(12px, 16px, #000);
     border: 1px solid $yellow-color;
     padding: 0 20px 0 20px;
-    white-space: nowrap;
+    // white-space: nowrap;
     margin-right: 17px;
     margin-bottom: 20px;
     transition: all .3 ease-in-out;
@@ -159,3 +159,13 @@ and (max-width: 1089px) {
   margin-bottom: 40px;
 }
 }
+
+/* Mobile ----------- */
+@media only screen
+and (min-width: 320px)
+and (max-width: 480px) {
+  .question-button {
+    padding: 0 18px 0 18px;
+  }
+}
+
