--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,4 +8,4 @@
 @import './questions/nav-arrows/_nav-arrows';
 @import './questions/progress/_progress';
 @import './questions/button/_button';
-@import './checkout/_checkout'
+@import './checkout/_checkout';
