--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -5,7 +5,8 @@ html {
 
 body {
   font-family: $font-family;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   color: $main-color;
   background-color: $gray-color;
   margin: 0;
