--- a/scss/checkout/_checkout.scss
+++ b/scss/checkout/_checkout.scss
@@ -1,9 +1,17 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 .checkout-block {
   width: 66.25%;
   max-width: 944px;
   min-width: 944px;
   border: 1px solid #fff;
-  box-shadow: 4px 4px 7px #E5E5E5;
+  -webkit-box-shadow: 4px 4px 7px #E5E5E5;
+          box-shadow: 4px 4px 7px #E5E5E5;
   border-radius: 8px;
   margin: 0 auto;
   background-color: #fff;
@@ -14,10 +22,19 @@
 }
 
 .heart {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding-bottom: 40px;
 
   &__img {
@@ -36,8 +53,13 @@
 }
 
 .bye {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin: auto;
   max-width: 567px;
   @include setFont(14px, 19px, #000);
@@ -103,4 +125,3 @@ and (max-width: 480px) {
     margin-bottom: 200px;
   }
 }
-
