--- a/scss/nav-bar/_nav-bar.scss
+++ b/scss/nav-bar/_nav-bar.scss
@@ -1,12 +1,18 @@
+
 .nav-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   max-width: 100vw;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 41px;
   padding: 0px 24px 0px 40px;
-  box-shadow: 0px 2px 16px rgba(55, 63, 71, 0.15);
+  -webkit-box-shadow: 0px 2px 16px rgba(55, 63, 71, 0.15);
+          box-shadow: 0px 2px 16px rgba(55, 63, 71, 0.15);
   background-color: #fff;
 }
 
@@ -19,9 +25,15 @@
 }
 
 .navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 100%;
   min-height: 64px;
   white-space: nowrap;
@@ -49,8 +61,12 @@
 
 .menu {
   min-width: 564px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   
   &--margin {
     margin-right: (131 / 1440) * 100%;
@@ -75,9 +91,15 @@
 }
 
 .dropdown {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   min-width: 329px;
 
   &__separator {
@@ -104,6 +126,8 @@
 }
 
 .dropdown-country {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 26px;
   height: 17px;
@@ -162,6 +186,8 @@ and (max-width: 1089px) {
   }
 
   .burger {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
 
@@ -172,7 +198,9 @@ and (max-width: 1089px) {
   .nav-wrapper {
     position: relative;
     z-index: 10;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     padding: 0px 16px 0px 17px;
     margin-bottom: 0px;
   }
@@ -217,4 +245,3 @@ and (max-width: 480px) {
   height: 52px;
 }
 }
-
