--- a/scss/questions/_questions.scss
+++ b/scss/questions/_questions.scss
@@ -3,7 +3,8 @@
   max-width: 944px;
   min-width: 944px;
   border: 1px solid #fff;
-  box-shadow: 4px 4px 7px #E5E5E5;
+  -webkit-box-shadow: 4px 4px 7px #E5E5E5;
+          box-shadow: 4px 4px 7px #E5E5E5;
   border-radius: 8px;
   margin: 0 auto;
   background-color: #fff;
@@ -19,9 +20,13 @@
 }
 
 .question-buttons__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  align-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-line-pack: justify;
+      align-content: space-between;
   margin-left: 17px;
 }
 
@@ -39,16 +44,16 @@ input[type="password"]::-ms-reveal {
   margin-bottom: 20px;
 
   &__city {
-    // reset default styles
+    /* reset default styles */
     border:none;
     background-image:none;
     background-color:transparent;
     -webkit-box-shadow: none;
-    -moz-box-shadow: none;
     box-shadow: none;
 
     margin-left: 17px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     width: 220px;
     height: 40px;
     padding: 0;
@@ -58,17 +63,39 @@ input[type="password"]::-ms-reveal {
     background-color: #fff;
     padding-left: 21px;
     color: #000000;
+    -webkit-transition: border-color .2s ease-out;
+    -o-transition: border-color .2s ease-out;
     transition: border-color .2s ease-out;
   
     &:focus {
       outline: none;
       border-color: $yellow-color;
+      -webkit-transition: border-color .2s ease-in;
+      -o-transition: border-color .2s ease-in;
       transition: border-color .2s ease-in;
     }
 
     &:hover {
       border-color: $yellow-color;
+      -webkit-transition: border-color .2s ease-in;
+      -o-transition: border-color .2s ease-in;
       transition: border-color .2s ease-in;
+    }
+
+    &::-webkit-input-placeholder {
+      @include setFont(12px, 16px, $gray-text-color);
+    }
+
+    &::-moz-placeholder {
+      @include setFont(12px, 16px, $gray-text-color);
+    }
+
+    &:-ms-input-placeholder {
+      @include setFont(12px, 16px, $gray-text-color);
+    }
+
+    &::-ms-input-placeholder {
+      @include setFont(12px, 16px, $gray-text-color);
     }
 
     &::placeholder {
@@ -87,19 +114,24 @@ input[type="password"]::-ms-reveal {
   margin-top: 0px;
   
   &-button {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     min-width: 100px;
-    box-sizing: border-box;
-    // height: 40px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     border-radius: 6px;
     background-color: #fff;
     @include setFont(12px, 16px, #000);
     border: 1px solid $yellow-color;
     padding: 0 20px 0 20px;
-    // white-space: nowrap;
     margin-right: 17px;
     margin-bottom: 20px;
+    -webkit-transition: all .3 ease-in-out;
+    -o-transition: all .3 ease-in-out;
     transition: all .3 ease-in-out;
     cursor: pointer;
 
@@ -109,6 +141,8 @@ input[type="password"]::-ms-reveal {
 
     &:hover {
       background-color: #FFB300;
+      -webkit-transition: all .3 ease-in-out;
+      -o-transition: all .3 ease-in-out;
       transition: all .3 ease-in-out;
     }
 
@@ -141,6 +175,8 @@ input[type="password"]::-ms-reveal {
 }
 
 .display-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -182,4 +218,3 @@ and (max-width: 480px) {
     }
   }
 }
-
