--- a/scss/questions/nav-arrows/_nav-arrows.scss
+++ b/scss/questions/nav-arrows/_nav-arrows.scss
@@ -1,13 +1,23 @@
 .nav-arrows {
   padding: 20.89px 23.61px 25.89px 62.9px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .nav-arrows .back-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   cursor: pointer;
 }
 
