--- a/scss/questions/progress/_progress.scss
+++ b/scss/questions/progress/_progress.scss
@@ -1,8 +1,14 @@
 .progress {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 22px;
 
   &--margin {
